Revision as of afternoon of Sun, Feb 4 - Finished P10

--- a/p1/tako_hisada_p1.ipynb
+++ b/p1/tako_hisada_p1.ipynb
@@ -495,9 +495,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 344,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k = 1 ; accuracy: 0.977\n",
+      "k = 1 ; accuracy: 0.982\n",
+      "k = 1 ; accuracy: 0.962\n",
+      "k = 1 ; accuracy: 0.979\n"
+     ]
+    }
+   ],
    "source": [
     "def P6():\n",
     "    \n",
