Revision as of afternoon of Mon, Feb 5 - Made minor revision to P4

--- a/p1/tako_hisada_p1.ipynb
+++ b/p1/tako_hisada_p1.ipynb
@@ -489,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Applying np.log() to train_size makes the end plot more reasonable however the accuracy when n = 60000 still exceeds 1 which cannot be true."
+    "Applying np.log() to train_size makes the end plot more reasonable with the accuracy of 1.034 when n = 60000. Applying np.log() once more further decreases predicted accuracy to 1.013 for n = 60000."
    ]
   },
   {
