Revision as of the morning of Feb 23 - Finished P3

--- a/p2/tako_hisada_p2.ipynb
+++ b/p2/tako_hisada_p2.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,17 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading 20news dataset. This may take a few minutes.\n",
-      "Downloading dataset from https://ndownloader.figshare.com/files/5975967 (14 MB)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -127,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +257,12 @@
       "(4, 4)\n",
       "4\n",
       "Average number of non-zero features per example: 1\n",
-      "(2034, 223499)\n"
+      "Size of the bigram vacabulary: 196586\n",
+      "Size of the trigram vacabulary: 329269\n",
+      "Size of the vacabulary with min_df = 10: 3064\n",
+      "Size of the dev_data vacabulary: 16246\n",
+      "Number of the words in the dev data missing from the vacabulary: 10633\n",
+      "Fraction of the words in the dev data missing from the vacabulary: 0.396\n"
      ]
     }
    ],
@@ -296,10 +293,30 @@
     "    print \"Average number of non-zero features per example: {0:.3g}\".format((float(X_2.nnz)/X_2.shape[1]))\n",
     "    \n",
     "    # d\n",
-    "    bigram_vectorizer = CountVectorizer(ngram_range=(1, 2), token_pattern=r'\\b\\w+\\b', min_df=1)\n",
+    "    \n",
+    "    ## Bigram\n",
+    "    bigram_vectorizer = CountVectorizer(ngram_range=(2, 2), token_pattern=r'\\b\\w+\\b', min_df=1)\n",
     "    analyze = bigram_vectorizer.build_analyzer()\n",
-    "    X_3 = bigram_vectorizer.fit_transform(train_data)\n",
-    "    print X_3.shape\n",
+    "    X_bi = bigram_vectorizer.fit_transform(train_data)\n",
+    "    print \"Size of the bigram vacabulary: {}\".format(X_bi.shape[1])\n",
+    "    \n",
+    "    ## Trigram\n",
+    "    triram_vectorizer = CountVectorizer(ngram_range=(3, 3), token_pattern=r'\\b\\w+\\b', min_df=1)\n",
+    "    analyze = triram_vectorizer.build_analyzer()\n",
+    "    X_tri = triram_vectorizer.fit_transform(train_data)\n",
+    "    print \"Size of the trigram vacabulary: {}\".format(X_tri.shape[1])\n",
+    "\n",
+    "    # e\n",
+    "    min_10_vectorizer = CountVectorizer(min_df=10)\n",
+    "    X_min_10 = min_10_vectorizer.fit_transform(train_data)\n",
+    "    print \"Size of the vacabulary with min_df = 10: {}\".format(X_min_10.shape[1])\n",
+    "\n",
+    "    # f\n",
+    "    dev_vectorizer = CountVectorizer()\n",
+    "    X_dev = dev_vectorizer.fit_transform(dev_data)\n",
+    "    print \"Size of the dev_data vacabulary: {}\".format(X_dev.shape[1])\n",
+    "    print \"Number of the words in the dev data missing from the vacabulary: {}\".format(X.shape[1] - X_dev.shape[1])\n",
+    "    print \"Fraction of the words in the dev data missing from the vacabulary: {0:.3g}\".format((float(X.shape[1]) - X_dev.shape[1])/X.shape[1])\n",
     "\n",
     "### STUDENT END ###\n",
     "P2()"
@@ -327,24 +344,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best K Value: 95 Best Score: 0.4425\n",
+      "F1 Score - k nearest neighbors classifier (k=1): 0.438\n",
+      "Best Alpha Value: 0.01 Best Score: 0.8284\n",
+      "F1 Score - MultinomialNB classifier (alpha=0.01): 0.755\n",
+      "Best C Value: 0.5 Best Score: 0.7714\n",
+      "F1 Score - LogisticRegression classifier (C=0.5): 0.679\n"
+     ]
+    }
+   ],
    "source": [
-    "#def P3():\n",
+    "def P3():\n",
     "### STUDENT START ###\n",
     "\n",
+    "    # Instantiate CountVectorizer\n",
+    "    vectorizer = CountVectorizer()\n",
+    "    \n",
+    "    # Transform data\n",
+    "    X_train = vectorizer.fit_transform(train_data)\n",
+    "    X_dev = vectorizer.transform(dev_data)\n",
+    "    \n",
+    "    # Instantiate KNN\n",
+    "    clf_knn = KNeighborsClassifier(n_neighbors=k)\n",
+    "\n",
+    "    # Find the optimal value for k using GridSearchCV\n",
+    "    k_vals = { 'n_neighbors': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 15, 20, 50, 75, 95, 100, 1000]}\n",
+    "    param_searcher = GridSearchCV(clf_knn, k_vals)\n",
+    "    param_searcher.fit(X_train, train_labels)\n",
+    "    print \"Best K Value: {} Best Score: {:.4}\".format(\n",
+    "        param_searcher.best_params_['n_neighbors'],\n",
+    "        param_searcher.best_score_\n",
+    "    )\n",
+    "\n",
+    "    clf_knn.set_params(n_neighbors = param_searcher.best_params_['n_neighbors'])\n",
+    "    clf_knn.fit(X_train, train_labels)\n",
+    "    preds = clf_knn.predict(X_dev)\n",
+    "    print 'F1 Score - k nearest neighbors classifier (k={0}): {1:.3g}'.format(\n",
+    "        k,\n",
+    "        metrics.f1_score(dev_labels, preds, average='macro')\n",
+    "    )\n",
+    "    \n",
+    "    # Instantiate MultinomialNB\n",
+    "    clf_mnb = MultinomialNB()\n",
+    "\n",
+    "    # Find the optimal value for alpha using GridSearchCV\n",
+    "    alpha_vals = {'alpha': [0.0, 0.0001, 0.001, 0.01, 0.1, 0.5, 1.0, 2.0, 10.0]}\n",
+    "    param_searcher = GridSearchCV(clf_mnb, alpha_vals)\n",
+    "    param_searcher.fit(X_train, train_labels)\n",
+    "    print \"Best Alpha Value: {} Best Score: {:.4}\".format(\n",
+    "        param_searcher.best_params_['alpha'],\n",
+    "        param_searcher.best_score_\n",
+    "    )\n",
+    "   \n",
+    "    clf_mnb.set_params(alpha=param_searcher.best_params_['alpha'])\n",
+    "    clf_mnb.fit(X_train, train_labels)\n",
+    "    preds = clf_mnb.predict(X_dev)\n",
+    "    print 'F1 Score - MultinomialNB classifier (alpha={0}): {1:.3g}'.format(\n",
+    "        param_searcher.best_params_['alpha'],\n",
+    "        metrics.f1_score(dev_labels, preds, average='macro')\n",
+    "    )\n",
+    "\n",
+    "    # Instantiate LogisticRegression with L2 regularization\n",
+    "    clf_lr = LogisticRegression()\n",
+    "    \n",
+    "    # Find the optimal value for C using GridSearchCV\n",
+    "    c_vals = {'C': [0.0001, 0.001, 0.01, 0.1, 0.5, 1.0, 2.0, 10.0, 100, 1000, 1e18]}\n",
+    "    param_searcher = GridSearchCV(clf_lr, c_vals)\n",
+    "    param_searcher.fit(X_train, train_labels)\n",
+    "    print \"Best C Value: {} Best Score: {:.4}\".format(\n",
+    "        param_searcher.best_params_['C'],\n",
+    "        param_searcher.best_score_\n",
+    "    )\n",
+    "   \n",
+    "    clf_lr.fit(X_train, train_labels)\n",
+    "    preds = clf_lr.predict(X_dev)\n",
+    "    print 'F1 Score - LogisticRegression classifier (C={0}): {1:.3g}'.format(\n",
+    "        param_searcher.best_params_['C'],\n",
+    "        metrics.f1_score(dev_labels, preds, average='macro')\n",
+    "    )\n",
+    "    \n",
     "### STUDENT END ###\n",
-    "#P3()"
+    "P3()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score - LogisticRegression classifier (C=0.0001): 0.518\n",
+      "Weight Sum for Class 0: 0.00770174944675\n",
+      "Weight Sum for Class 1: 0.0119412003106\n",
+      "Weight Sum for Class 2: 0.00943507686564\n",
+      "Weight Sum for Class 3: 0.00910283529383\n",
+      "F1 Score - LogisticRegression classifier (C=0.001): 0.597\n",
+      "Weight Sum for Class 0: 0.165093451668\n",
+      "Weight Sum for Class 1: 0.200952746906\n",
+      "Weight Sum for Class 2: 0.180670937543\n",
+      "Weight Sum for Class 3: 0.187242784378\n",
+      "F1 Score - LogisticRegression classifier (C=0.01): 0.645\n",
+      "Weight Sum for Class 0: 2.54148768255\n",
+      "Weight Sum for Class 1: 2.93970936836\n",
+      "Weight Sum for Class 2: 2.86246910169\n",
+      "Weight Sum for Class 3: 2.25002918952\n",
+      "F1 Score - LogisticRegression classifier (C=0.1): 0.679\n",
+      "Weight Sum for Class 0: 27.1362351115\n",
+      "Weight Sum for Class 1: 24.6595673235\n",
+      "Weight Sum for Class 2: 27.4587234794\n",
+      "Weight Sum for Class 3: 23.0260045509\n",
+      "F1 Score - LogisticRegression classifier (C=0.5): 0.692\n",
+      "Weight Sum for Class 0: 102.513457187\n",
+      "Weight Sum for Class 1: 83.1021581712\n",
+      "Weight Sum for Class 2: 98.9828885033\n",
+      "Weight Sum for Class 3: 89.0008438814\n",
+      "F1 Score - LogisticRegression classifier (C=1.0): 0.679\n",
+      "Weight Sum for Class 0: 166.941861049\n",
+      "Weight Sum for Class 1: 130.898971617\n",
+      "Weight Sum for Class 2: 157.915504289\n",
+      "Weight Sum for Class 3: 145.746965783\n",
+      "F1 Score - LogisticRegression classifier (C=2.0): 0.678\n",
+      "Weight Sum for Class 0: 257.43567163\n",
+      "Weight Sum for Class 1: 197.833809487\n",
+      "Weight Sum for Class 2: 239.948180007\n",
+      "Weight Sum for Class 3: 226.516504052\n",
+      "F1 Score - LogisticRegression classifier (C=10.0): 0.674\n",
+      "Weight Sum for Class 0: 586.548704112\n",
+      "Weight Sum for Class 1: 448.438488547\n",
+      "Weight Sum for Class 2: 538.927442641\n",
+      "Weight Sum for Class 3: 530.927365837\n",
+      "F1 Score - LogisticRegression classifier (C=100): 0.666\n",
+      "Weight Sum for Class 0: 1406.04643579\n",
+      "Weight Sum for Class 1: 1096.47123869\n",
+      "Weight Sum for Class 2: 1293.35791921\n",
+      "Weight Sum for Class 3: 1311.87241201\n",
+      "F1 Score - LogisticRegression classifier (C=1000): 0.669\n",
+      "Weight Sum for Class 0: 2714.20405693\n",
+      "Weight Sum for Class 1: 1918.14209478\n",
+      "Weight Sum for Class 2: 2448.38039257\n",
+      "Weight Sum for Class 3: 2558.41996965\n",
+      "F1 Score - LogisticRegression classifier (C=1e+18): 0.665\n",
+      "Weight Sum for Class 0: 4106.45594915\n",
+      "Weight Sum for Class 1: 2139.22100651\n",
+      "Weight Sum for Class 2: 3024.05998291\n",
+      "Weight Sum for Class 3: 4948.13088314\n"
+     ]
+    }
+   ],
+   "source": [
+    "def P3_C():\n",
+    "### STUDENT START ###\n",
+    "\n",
+    "    # Internal function for computing summed weight\n",
+    "    def calc_sum_weight(coef):\n",
+    "        for i in range(0, len(coef)):\n",
+    "            print \"Weight Sum for Class {}: {}\".format(i, np.sum(coef[i] ** 2))\n",
+    "\n",
+    "    # Instantiate CountVectorizer\n",
+    "    vectorizer = CountVectorizer()\n",
+    "    \n",
+    "    # Transform data\n",
+    "    X_train = vectorizer.fit_transform(train_data)\n",
+    "    X_dev = vectorizer.transform(dev_data)\n",
+    "    \n",
+    "    # Instantiate LogisticRegression with L2 regularization\n",
+    "    clf_lr = LogisticRegression()\n",
+    "    \n",
+    "    # C valuess\n",
+    "    c_vals = [0.0001, 0.001, 0.01, 0.1, 0.5, 1.0, 2.0, 10.0, 100, 1000, 1e18]\n",
+    "\n",
+    "    for c in c_vals:\n",
+    "        clf_lr.set_params(C=c)\n",
+    "        clf_lr.fit(X_train, train_labels)\n",
+    "        preds = clf_lr.predict(X_dev)\n",
+    "        print 'F1 Score - LogisticRegression classifier (C={0}): {1:.3g}'.format(\n",
+    "            c,\n",
+    "            metrics.f1_score(dev_labels, preds, average='macro')\n",
+    "        )\n",
+    "        calc_sum_weight(clf_lr.coef_)\n",
+    "\n",
+    "### STUDENT END ###\n",
+    "P3_C()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ANSWER:"
+    "ANSWER:\n",
+    "\n",
+    "a. Why doesn't nearest neighbors work well for this problem?\n",
+    "\n",
+    "Nearest neighbors doens't work well for this problem due to the high number of features (dimensions) evident in the dataset we are working with.\n",
+    "\n",
+    "b. Any ideas why logistic regression doesn't work as well as Naive Bayes?\n",
+    "\n",
+    "Logistic regression does not work as well as Naive Bayes in this case because logistic regression works the best for classifying boolean data whereas Multinominal Naive Bayes is designed to handle multi-class discrete data.\n",
+    "\n",
+    "c. Logistic regression estimates a weight vector for each class, which you can access with the coef\\_ attribute. Output the sum of the squared weight values for each class for each setting of the C parameter. Briefly explain the relationship between the sum and the value of C.\n",
+    "\n",
+    "As can be seen by the output of P3_C(), the sum of the squard weight vlues for each class increases as the value of C increases.\n"
    ]
   },
   {
