Revision as of evening of Sat, Feb 24. Finished up to P5

--- a/p2/tako_hisada_p2.ipynb
+++ b/p2/tako_hisada_p2.ipynb
@@ -565,24 +565,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    alt.atheism  talk.religion.misc  comp.graphics  sci.space\n",
+      "0      0.832119           -0.093456      -0.267107  -0.637606\n",
+      "1      0.823690           -0.191303      -0.286562  -0.387156\n",
+      "2      0.793995           -0.350952      -0.367167  -0.377007\n",
+      "3      0.673885           -0.103367      -0.285265  -0.290031\n",
+      "4     -0.641205            1.625936      -1.103125  -0.626308\n",
+      "5     -0.468683            1.117015      -0.671884  -0.381255\n",
+      "6     -0.303641            0.941824      -0.571095  -0.317591\n",
+      "7     -0.502428            0.731851      -0.258723  -0.525994\n",
+      "8     -1.061110           -1.116107       1.863778  -0.972125\n",
+      "9     -0.350376           -0.559592       1.012597  -0.498962\n",
+      "10    -0.376461           -0.396786       0.783752  -0.280916\n",
+      "11    -0.529417           -0.520932       0.648405   0.126582\n",
+      "12    -0.607123           -0.315351      -0.404374   0.929423\n",
+      "13    -0.483107           -0.339053      -0.247399   0.925525\n",
+      "14    -0.244036           -0.217507      -0.374844   0.754721\n",
+      "15    -0.273589           -0.107027      -0.058059   0.600084\n",
+      "\n",
+      "Bigram: \n",
+      "    alt.atheism  talk.religion.misc  comp.graphics  sci.space\n",
+      "0      0.704554           -0.244737      -0.325896  -0.204318\n",
+      "1      0.660843           -0.186336      -0.169208  -0.329302\n",
+      "2      0.610276           -0.811041      -0.781183   0.569793\n",
+      "3      0.540740           -0.280412      -0.120525  -0.413847\n",
+      "4     -0.624078            1.110841      -0.498992  -0.564696\n",
+      "5     -0.365089            1.004606      -0.467919  -0.379277\n",
+      "6     -0.273658            0.843578      -0.536109  -0.308580\n",
+      "7     -0.255519            0.649830      -0.609876  -0.229730\n",
+      "8     -0.275879           -0.627061       0.984678  -0.319344\n",
+      "9     -0.384245           -0.532889       0.888673  -0.221429\n",
+      "10    -0.157410           -0.217766       0.661229  -0.170888\n",
+      "11    -0.213183           -0.328401       0.594246  -0.216063\n",
+      "12    -0.442696           -0.304716      -0.074044   0.724697\n",
+      "13    -0.236013           -0.234878      -0.208277   0.723365\n",
+      "14    -0.134786           -0.202369      -0.211183   0.690325\n",
+      "15    -0.161569           -0.249415      -0.366008   0.622992\n"
+     ]
+    }
+   ],
    "source": [
-    "#def P4():\n",
+    "def P4():\n",
     "### STUDENT START ###\n",
     "\n",
+    "    def get_nth_largest_index(arr, n):\n",
+    "        if n > len(arr):\n",
+    "            return False\n",
+    "        \n",
+    "        if n < 1:\n",
+    "            return False\n",
+    "        \n",
+    "        if n == 1:\n",
+    "            return arr.index(max(arr))\n",
+    "        \n",
+    "        arr[arr.index(max(arr))] = None\n",
+    "        \n",
+    "        return get_nth_largest_index(arr, n-1)\n",
+    "\n",
+    "\n",
+    "    # Instantiate CountVectorizer\n",
+    "    vectorizer = CountVectorizer()\n",
+    "    \n",
+    "    # Transform data\n",
+    "    X_train = vectorizer.fit_transform(train_data)\n",
+    "    X_dev = vectorizer.transform(dev_data)\n",
+    "    \n",
+    "    # Instantiate LogisticRegression with L2 regularization\n",
+    "    clf_lr = LogisticRegression()\n",
+    "    \n",
+    "    # Initialize C with the optimal value computed earlier\n",
+    "    c = 0.5\n",
+    "    \n",
+    "    clf_lr.set_params(C=c)\n",
+    "    clf_lr.fit(X_train, train_labels)\n",
+    "    preds = clf_lr.predict(X_dev)\n",
+    "    coef = clf_lr.coef_.tolist()\n",
+    "\n",
+    "    indice = []\n",
+    "    \n",
+    "    # Get indice for largest weights\n",
+    "    for i in range(0, len(coef)):\n",
+    "        for j in range(1, 5):\n",
+    "            indice.append(get_nth_largest_index(coef[i], j))\n",
+    "\n",
+    "    # Get a fresh list of coefficients\n",
+    "    coef = clf_lr.coef_.tolist()\n",
+    "    \n",
+    "    arr = []\n",
+    "    \n",
+    "    # Collect weights\n",
+    "    for i in range(0, len(indice)):\n",
+    "        arr.append([])\n",
+    "        for j in range(0, len(coef)):\n",
+    "            arr[i].append(coef[j][indice[i]])\n",
+    "       \n",
+    "    df = pd.DataFrame(arr, columns=categories)\n",
+    "    \n",
+    "    # Print the data\n",
+    "    print df\n",
+    "\n",
+    "    # Now we'll repeat this for bigram\n",
+    "    \n",
+    "    ## Instantiate bigram vectorizer\n",
+    "    bigram_vectorizer = CountVectorizer(ngram_range=(2, 2), token_pattern=r'\\b\\w+\\b', min_df=1)\n",
+    "    X_bi = bigram_vectorizer.fit_transform(train_data)\n",
+    "    X_bi_dev = bigram_vectorizer.transform(dev_data)\n",
+    "\n",
+    "    # Instantiate LogisticRegression with L2 regularization\n",
+    "    clf_lr = LogisticRegression()\n",
+    "    clf_lr.fit(X_bi, train_labels)\n",
+    "    preds = clf_lr.predict(X_bi_dev)\n",
+    "    coef_bi = clf_lr.coef_.tolist()\n",
+    "\n",
+    "    indice = []\n",
+    "    \n",
+    "    # Get indice for largest weights\n",
+    "    for i in range(0, len(coef_bi)):\n",
+    "        for j in range(1, 5):\n",
+    "            indice.append(get_nth_largest_index(coef_bi[i], j))\n",
+    "\n",
+    "    # Get a fresh list of coefficients\n",
+    "    coef_bi = clf_lr.coef_.tolist()\n",
+    "    \n",
+    "    arr_bi = []\n",
+    "    \n",
+    "    # Collect weights\n",
+    "    for i in range(0, len(indice)):\n",
+    "        arr_bi.append([])\n",
+    "        for j in range(0, len(coef_bi)):\n",
+    "            arr_bi[i].append(coef_bi[j][indice[i]])\n",
+    "       \n",
+    "    df_bi = pd.DataFrame(arr_bi, columns=categories)\n",
+    "    \n",
+    "    # Print the data\n",
+    "    print \"\\nBigram: \\n{}\".format(df_bi)\n",
+    "    \n",
     "### STUDENT END ###\n",
-    "#P4()"
+    "P4()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ANSWER:"
+    "ANSWER: Although the weight values are different between the 2 models, they follow the same pattern in that for a given nth row, we see the largest value for the same label."
    ]
   },
   {
@@ -596,25 +729,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score - Logistic Regression classifier: 0.679\n",
+      "F1 Score - Logistic Regression classifier: 0.687\n",
+      "F1 Score - Logistic Regression classifier: 0.69\n"
+     ]
+    }
+   ],
    "source": [
-    "#def empty_preprocessor(s):\n",
-    "#    return s\n",
+    "def empty_preprocessor(s):\n",
+    "    return s\n",
     "\n",
-    "#def better_preprocessor(s):\n",
+    "def better_preprocessor(s):\n",
     "### STUDENT START ###\n",
-    "\n",
+    "    s = re.sub(r'[^a-zA-Z0-9\\s_\\-]', '#', s)  # Replace non-word characters with an arbitrary token\n",
+    "    s = re.sub(r'[#]{2,}', '#', s)  # Eliminate redundant tokens\n",
+    "    s = re.sub(r'\\t', '', s) # Eliminate tabs\n",
+    "    s = re.sub(r'\\r\\n|\\n\\r|\\r', '', s) # Eliminate carriage returns\n",
+    "    s = re.sub(r'\\n\\n', '', s) # Eliminate redundant linebreaks\n",
+    "    s = re.sub(r'\\s{2,}', ' ', s) # Eliminate redundant spaces\n",
+    "    return s\n",
     "### STUDENT END ###\n",
     "\n",
-    "#def P5():\n",
+    "def P5():\n",
     "### STUDENT START ###\n",
     "\n",
+    "    # Internal function for running Logistic Regression\n",
+    "    def run_lr(train_data, train_labels, dev_data, dev_labels, preprocessor):\n",
+    "        vectorizer = CountVectorizer(preprocessor=preprocessor)\n",
+    "        X_train = vectorizer.fit_transform(train_data)\n",
+    "        X_dev = vectorizer.transform(dev_data)\n",
+    "\n",
+    "        # Instantiate KNN\n",
+    "        clf = LogisticRegression()\n",
+    "        clf.fit(X_train, train_labels)\n",
+    "        preds = clf.predict(X_dev)\n",
+    "        print 'F1 Score - Logistic Regression classifier: {0:.3g}'.format(\n",
+    "            metrics.f1_score(dev_labels, preds, average='macro')\n",
+    "        )\n",
+    "\n",
+    "    # Run Logistic Regression with no preprocessor\n",
+    "    run_lr(train_data, train_labels, dev_data, dev_labels, None)\n",
+    "    \n",
+    "    # Run Logistic Regression with empty preprocessor\n",
+    "    run_lr(train_data, train_labels, dev_data, dev_labels, empty_preprocessor)\n",
+    "    \n",
+    "    # Run Logistic Regression with better preprocessor\n",
+    "    run_lr(train_data, train_labels, dev_data, dev_labels, better_preprocessor)\n",
+    "        \n",
     "### STUDENT END ###\n",
-    "#P5()"
+    "P5()"
    ]
   },
   {
