Revision as of afternoon of Sun, Feb 25 working on P6

--- a/p2/tako_hisada_p2.ipynb
+++ b/p2/tako_hisada_p2.ipynb
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,8 @@
      "text": [
       "F1 Score - Logistic Regression classifier: 0.679\n",
       "F1 Score - Logistic Regression classifier: 0.687\n",
-      "F1 Score - Logistic Regression classifier: 0.69\n"
+      "F1 Score - Logistic Regression classifier: 0.69\n",
+      "Using better_preprocessor, the F1 score has improved by 0.00342\n"
      ]
     }
    ],
@@ -770,18 +771,22 @@
     "        clf = LogisticRegression()\n",
     "        clf.fit(X_train, train_labels)\n",
     "        preds = clf.predict(X_dev)\n",
+    "        f1 = metrics.f1_score(dev_labels, preds, average='macro')\n",
     "        print 'F1 Score - Logistic Regression classifier: {0:.3g}'.format(\n",
-    "            metrics.f1_score(dev_labels, preds, average='macro')\n",
+    "            f1\n",
     "        )\n",
+    "        return f1\n",
     "\n",
     "    # Run Logistic Regression with no preprocessor\n",
-    "    run_lr(train_data, train_labels, dev_data, dev_labels, None)\n",
+    "    score_1 = run_lr(train_data, train_labels, dev_data, dev_labels, None)\n",
     "    \n",
     "    # Run Logistic Regression with empty preprocessor\n",
-    "    run_lr(train_data, train_labels, dev_data, dev_labels, empty_preprocessor)\n",
+    "    score_2 = run_lr(train_data, train_labels, dev_data, dev_labels, empty_preprocessor)\n",
     "    \n",
     "    # Run Logistic Regression with better preprocessor\n",
-    "    run_lr(train_data, train_labels, dev_data, dev_labels, better_preprocessor)\n",
+    "    score_3 = run_lr(train_data, train_labels, dev_data, dev_labels, better_preprocessor)\n",
+    "    \n",
+    "    print \"Using better_preprocessor, the F1 score has improved by {0:.3g}\".format(score_3 - score_2)\n",
     "        \n",
     "### STUDENT END ###\n",
     "P5()"
@@ -802,20 +807,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 389,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of non-zero weights using L1 penalty: 1609\n",
+      "F1 Score - Logistic Regression classifier using L1 penalty: 0.665\n",
+      "Number of non-zero weights　using L2 penalty: 107516\n",
+      "F1 Score - Logistic Regression classifier　using L2 penalty: 0.679\n",
+      "[    0     1     2 ..., 26876 26877 26878]\n",
+      "[    0     1     2 ..., 26876 26877 26878]\n",
+      "[    0     1     2 ..., 26876 26877 26878]\n",
+      "[    0     1     2 ..., 26876 26877 26878]\n"
+     ]
+    }
+   ],
    "source": [
-    "#def P6():\n",
+    "def P6():\n",
     "    # Keep this random seed here to make comparison easier.\n",
-    "    #np.random.seed(0)\n",
+    "    np.random.seed(0)\n",
     "\n",
     "    ### STUDENT START ###\n",
+    "    vectorizer = CountVectorizer(preprocessor=None)\n",
+    "    X_train = vectorizer.fit_transform(train_data)\n",
+    "    X_dev = vectorizer.transform(dev_data)\n",
+    "\n",
+    "    # Instantiate LogisticRegression with L1\n",
+    "    clf_l1 = LogisticRegression(penalty='l1')\n",
+    "    clf_l1.fit(X_train, train_labels)\n",
+    "    print \"Number of non-zero weights using L1 penalty: {}\".format(len(clf_l1.coef_[clf_l1.coef_ != 0]))\n",
+    "    preds = clf_l1.predict(X_dev)\n",
+    "    print 'F1 Score - Logistic Regression classifier using L1 penalty: {0:.3g}'.format(\n",
+    "        metrics.f1_score(dev_labels, preds, average='macro')\n",
+    "    )\n",
+    "   \n",
+    "    # Instantiate LogisticRegression with L2\n",
+    "    clf_l2 = LogisticRegression()\n",
+    "    clf_l2.fit(X_train, train_labels)\n",
+    "    print \"Number of non-zero weights　using L2 penalty: {}\".format(len(clf_l2.coef_[clf_l2.coef_ != 0]))\n",
+    "    preds = clf_l2.predict(X_dev)\n",
+    "    print 'F1 Score - Logistic Regression classifier　using L2 penalty: {0:.3g}'.format(\n",
+    "        metrics.f1_score(dev_labels, preds, average='macro')\n",
+    "    )\n",
+    "    \n",
+    "    for i in range(0, len(clf_l1.coef_)):\n",
+    "        weights = np.array(range(len(clf_l1.coef_[i] != 0)))\n",
+    "        print weights\n",
+    "  \n",
     "    \n",
     "    ### STUDENT END ###\n",
-    "#P6()"
+    "P6()"
    ]
   },
   {
