Revision as of night of Mar 23 - Finished P5

--- a/p3/tako_hisada_p3.ipynb
+++ b/p3/tako_hisada_p3.ipynb
@@ -449,15 +449,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-2.34517581 -2.17686117 -1.42255347 ..., -2.07862631 -1.75100205\n",
-      " -1.45103113]\n"
+      "Accuracy: 0.9368\n"
      ]
     }
    ],
@@ -470,14 +469,29 @@
     "    train_data_transformed = pca.transform(train_data)\n",
     "    X_train_pos = train_data_transformed[train_labels == 1]\n",
     "    X_train_neg = train_data_transformed[train_labels == 0]\n",
+    "    X_test = pca.transform(test_data)\n",
     "\n",
-    "\n",
-    "    # fit a 4-component full covariance GMM\n",
+    "    # fit a 4-component full covariance GMM for positive examples\n",
     "    clf_pos = mixture.GaussianMixture(n_components=4, covariance_type='full')\n",
     "    clf_pos.fit(X_train_pos)\n",
-    "    scores = clf_pos.score_samples(X_train_pos)\n",
-    "    print scores\n",
+    "    scores_pos = clf_pos.score_samples(X_test)\n",
     "\n",
+    "    # fit a 4-component full covariance GMM for negative examples\n",
+    "    clf_neg = mixture.GaussianMixture(n_components=4, covariance_type='full')\n",
+    "    clf_neg.fit(X_train_neg)\n",
+    "    scores_neg = clf_neg.score_samples(X_test)\n",
+    "    \n",
+    "    preds = []\n",
+    "    \n",
+    "    for i in range(0, len(scores_pos)):\n",
+    "        if scores_pos[i] > scores_neg[i]:\n",
+    "            preds.append(1)\n",
+    "        else:\n",
+    "            preds.append(0)\n",
+    "\n",
+    "    print \"Accuracy: {:.4}\".format(np.mean(preds == test_labels))\n",
+    "    \n",
+    "    \n",
     "### STUDENT END ###\n",
     "\n",
     "P5()"
